# sherlock-framework

./: .gitignore  CMakeLists.txt  README.md  notes.txt
data/: sherlock-CDD__CNN_list.csv  sherlock-CDD__LSTM_list.csv  sherlock-CDD_list.csv  sherlock-framework_list.csv  sherlock-noCDD_list.csv
data/nab_tuned_results/: TravelTime_451.csv  Twitter_volume_AAPL.csv  Twitter_volume_AMZN.csv  Twitter_volume_CVS.csv  Twitter_volume_GOOG.csv  Twitter_volume_IBM.csv  Twitter_volume_UPS.csv  art_daily_jumpsdown.csv  art_daily_no_noise.csv  art_daily_nojump.csv  art_daily_small_noise.csv  art_load_balancer_spikes.csv  cpu_utilization_asg_misconfiguration.csv  ec2_cpu_utilization_24ae8d.csv  ec2_cpu_utilization_77c1ca.csv  ec2_cpu_utilization_ac20cd.csv  ec2_cpu_utilization_fe7f93.csv  ec2_disk_write_bytes_c0d644.csv  ec2_network_in_5abac7.csv  elb_request_count_8c0756.csv  exchange-3_cpm_results.csv  exchange-4_cpc_results.csv  exchange-4_cpm_results.csv  nyc_taxi.csv  occupancy_6005.csv  rds_cpu_utilization_cc0c53.csv  rds_cpu_utilization_e47b3b.csv  rogue_agent_key_updown.csv
data/nab_tuned_results_CDD/: sherlock-CDD_list_training_ratio_0.1.csv  sherlock-CDD_list_training_ratio_0.15.csv  sherlock-CDD_list_training_ratio_0.2.csv  sherlock-CDD_list_training_ratio_0.25.csv  sherlock-CDD_list_training_ratio_0.3.csv  sherlock-CDD_list_training_ratio_0.35.csv  sherlock-CDD_list_training_ratio_0.4.csv  sherlock-CDD_list_training_ratio_0.45.csv  sherlock-CDD_list_training_ratio_0.5.csv  sherlock-CDD_list_training_ratio_0.55.csv  sherlock-CDD_list_training_ratio_0.6.csv  sherlock-CDD_list_training_ratio_0.65.csv  sherlock-CDD_list_training_ratio_0.7.csv
data/nab_tuned_results_CDD_CNN/: TravelTime_387.csv  TravelTime_451.csv  Twitter_volume_AAPL.csv  Twitter_volume_AMZN.csv  Twitter_volume_CRM.csv  Twitter_volume_CVS.csv  Twitter_volume_FB.csv  Twitter_volume_GOOG.csv  Twitter_volume_IBM.csv  Twitter_volume_KO.csv  Twitter_volume_PFE.csv  Twitter_volume_UPS.csv  ambient_temperature_system_failure.csv  art_daily_flatmiddle.csv  art_daily_jumpsdown.csv  art_daily_jumpsup.csv  art_daily_no_noise.csv  art_daily_nojump.csv  art_daily_perfect_square_wave.csv  art_daily_small_noise.csv  art_flatline.csv  art_noisy.csv  (+35 more)
results-server/: index.html  list.csv  list.txt  script.py  script1.py
scripts/: helpers.py  model_runner.py  model_runner_CDD_CNN.py  model_runner_CDD_LSTM.py  model_runner_iterations.py  model_runner_training_ratios.py  model_runner_training_ratios_CDD.py  model_runner_training_ratios_noCDD.py  sherlock-framework-summary-creator.py  threshold_changer.py  threshold_changer_iterations.py  threshold_changer_training_ratios.py  threshold_changer_training_ratios_CDD.py  threshold_changer_training_ratios_noCDD.py
src/: CMakeLists.txt  HistoryBuffer.cpp  HistoryBuffer.h  MainLoop.cpp  MainLoop.h  MutexLock.cpp  MutexLock.h  SharedMemory.h  main.cpp  main.debugging.cpp  main.lstmcnnet.cpp  main.multithreded.cpp  main.noconceptdrift.back.cpp  main.python.batch.withoutCD.cpp  main.thread_demo.cpp  main.thread_demo_with_file.cpp
src/AnomalyDetectionModule/: CMakeLists.txt
src/AnomalyDetectionModule/AnomalyDetectors/: AnomalyDetector.h
src/AnomalyDetectionModule/AnomalyDetectors/ConfidenceInterval/: ConfidenceIntervalAnomalyDetector.cpp  ConfidenceIntervalAnomalyDetector.h
src/AnomalyDetectionModule/AnomalyDetectors/default/: DefaultAnomalyDetector.cpp  DefaultAnomalyDetector.h
src/AnomalyDetectionModule/AnomalyDistanceMeasures/: AnomalyDistanceMeasure.h
src/AnomalyDetectionModule/AnomalyDistanceMeasures/FastDTW/: DTW.hpp  FastDTWAnomalyDistanceMeasure.cpp  FastDTWAnomalyDistanceMeasure.h
src/AnomalyDetectionModule/AnomalyThresholdSetters/: AnomalyThresholdSetter.h
src/AnomalyDetectionModule/AnomalyThresholdSetters/ConfidenceInterval/: ConfidenceIntervalAnomalyThresholdSetter.cpp  ConfidenceIntervalAnomalyThresholdSetter.h
src/AnomalyDetectionModule/AnomalyThresholdSetters/TrainingMax/: TrainingMaxAnomalyThresholdSetter.cpp  TrainingMaxAnomalyThresholdSetter.h
src/AnomalyDetectionModule/DistanceMeasures/: DistanceMeasure.h
src/AnomalyDetectionModule/ThresholdSetters/: ThresholdSetter.h
src/ConceptDriftDectectionModule/: CMakeLists.txt
src/ConceptDriftDectectionModule/ConceptDistanceMeasures/: ConceptDistanceMeasure.h
src/ConceptDriftDectectionModule/ConceptDistanceMeasures/FastDTW/: DTW.cpp  FastDTWConceptDistanceMeasure.cpp  FastDTWConceptDistanceMeasure.h
src/ConceptDriftDectectionModule/ConceptDriftDetectors/: ConceptDriftDetector.h
src/ConceptDriftDectectionModule/ConceptDriftDetectors/DynamicWindow/: DynamicWindowConceptDriftDetector.cpp  DynamicWindowConceptDriftDetector.h
src/ConceptDriftDectectionModule/ConceptDriftDetectors/NoConceptDriftDetector/: NoConceptDriftDetector.cpp  NoConceptDriftDetector.h
src/ConceptDriftDectectionModule/ConceptThresholdSetters/: ConceptThresholdSetter.h
src/ConceptDriftDectectionModule/ConceptThresholdSetters/ConfidenceInterval/: ConfidenceIntervalConceptThresholdSetter.cpp  ConfidenceIntervalConceptThresholdSetter.h
src/ConceptDriftDectectionModule/LossFunctions/: LossFunction.h
src/LSTMCNNnet/: CMakeLists.txt
src/LSTMCNNnet/CNNet/: CMakeLists.txt  CNN.cpp  CNN.hpp  ConvolutionLayer.hpp  PoolLayer.hpp
src/LSTMCNNnet/LSTMCNnet/: CMakeLists.txt  DTW.hpp  LSTMCNNFCPredictionModel.cpp  LSTMCNNFCPredictionModel.hpp
src/LSTMCNNnet/LSTMnet/: CMakeLists.txt  DataProcessor.cpp
src/LSTMCNNnet/logger/: CMakeLists.txt  logger.cpp  logger.hpp
src/ProfilingModule/: CMakeLists.txt
src/ProfilingModule/Profilers/: Profiler.h
src/ProfilingModule/Profilers/LSTMCNnet/: CMakeLists.txt  LSTMCNnetProfiler.cpp  LSTMCNnetProfiler.h
src/ProfilingModule/Profilers/LSTMCNnet/CNNet/: CMakeLists.txt  CNN.cpp
src/ProfilingModule/Profilers/LSTMCNnet/LSTMCNnet/: CMakeLists.txt  LSTMCNNFCPredictionModel.cpp  LSTMCNNFCPredictionModel.hpp
src/ProfilingModule/Profilers/LSTMCNnet/LSTMnet/: CMakeLists.txt  LSTMNet.cpp
src/ProfilingModule/Profilers/default/: DefaultProfiler.cpp  DefaultProfiler.h
src/include/: sherlock.h
(+2044 files in other folders)
